--- a/Sitecore.Foundation.Module/Serialization/ProjectTemplate.csproj
+++ b/Sitecore.Foundation.Module/Serialization/ProjectTemplate.csproj
@@ -43,8 +43,9 @@
 		<Reference Include="System.Data"/>
 		<Reference Include="System.Xml"/>
 	</ItemGroup>
-	<ItemGroup>
-	</ItemGroup>
+  <ItemGroup>
+    <Content Include="Foundation.$ext_modulename$.Templates\readme.txt" />
+  </ItemGroup>
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
