--- a/Sitecore.Foundation/Sitecore.Foundation.csproj
+++ b/Sitecore.Foundation/Sitecore.Foundation.csproj
@@ -9,11 +9,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{B3CB162B-7F75-43DC-8C42-1FD44EC667A2}</ProjectGuid>
+    <ProjectGuid>{1A4585A1-0CAA-4AE1-BC8D-7BFE8D7095FC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sitecore.Foundation.Module</RootNamespace>
-    <AssemblyName>Sitecore.Foundation.Module</AssemblyName>
+    <RootNamespace>Sitecore.Foundation</RootNamespace>
+    <AssemblyName>Sitecore.Foundation</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -54,57 +54,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\AssemblyInfo.cs" />
-    <None Include="code\Properties\AssemblyInfo.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="code\Properties\PublishProfiles\CustomProfile.pubxml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="code\Web.config" />
-    <None Include="code\Web.Debug.config" />
-    <None Include="code\Web.Release.config" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Serialization\Foundation.Module.Templates\readme.txt" />
-    <None Include="Template.ico" />
-    <None Include="code\App_Config\Include\z.Foundation\Sitecore.Foundation.Module.Serialization.config">
+    <None Include="App_Config\Include\z.Foundation\Sitecore.Foundation.Module.Serialization.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="code\packages.config" />
-    <None Include="code\Views\web.config" />
+    <None Include="AssemblyInfo.cs" />
+    <None Include="packages.config" />
+    <None Include="ProjectTemplate.csproj" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Sitecore.Foundation.ico" />
+    <None Include="Views\web.config" />
+    <None Include="Web.config" />
+    <None Include="Web.Debug.config" />
+    <None Include="Web.Release.config" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="Template.vstemplate">
+    <VSTemplate Include="Foundation.vstemplate">
       <SubType>Designer</SubType>
     </VSTemplate>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Serialization\ProjectTemplate.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <VSTemplate Include="Serialization\Serialization.vstemplate">
-      <SubType>Designer</SubType>
-    </VSTemplate>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Serialization\Template.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="code\Controllers\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="code\ProjectTemplate.csproj">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="code\Template.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <VSTemplate Include="code\Website.vstemplate">
-      <SubType>Designer</SubType>
-    </VSTemplate>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
