--- a/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Sitecore.Foundation.Module.Serialization.config
+++ b/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Sitecore.Foundation.Module.Serialization.config
@@ -2,10 +2,10 @@
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="Foundation.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="Foundation.Serialization">
-          <targetDataStore physicalRootPath="$destinationdirectory$\$ext_modulename$\Serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
+        <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="$ext_layer$.Serialization">
+          <targetDataStore physicalRootPath="$destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
-            <include name="Foundation.$ext_modulename$.Templates" database="master" path="/sitecore/templates/foundation/$ext_modulename$">
+            <include name="$ext_layer$.$ext_modulename$.Templates" database="master" path="/sitecore/templates/$ext_layer$/$ext_modulename$">
               <exclude children="false"/>
             </include>
           </predicate>
