--- a/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Sitecore.Foundation.Module.Serialization.config
+++ b/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Sitecore.Foundation.Module.Serialization.config
@@ -2,7 +2,7 @@
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="$ext_layer$.Serialization">
+        <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="$ext_layer$.Serialization" patch:after="configuration[@name='$ext_layer$.Serialization']">
           <targetDataStore physicalRootPath="$destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
             <include name="$ext_layer$.$ext_modulename$.Templates" database="master" path="/sitecore/templates/$ext_layer$/$ext_modulename$">
