--- a/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Serialization.config
+++ b/Sitecore.Foundation.Module/code/App_Config/Include/z.Foundation/Serialization.config
@@ -5,8 +5,10 @@
         <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="$ext_layer$.Serialization" patch:after="configuration[@name='$ext_layer$.Serialization']">
           <targetDataStore physicalRootPath="$destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
-            <include name="$ext_layer$.$ext_modulename$.Templates" database="master" path="/sitecore/templates/$ext_layer$/$ext_modulename$">
-            </include>
+            <include name="$ext_layer$.$ext_modulename$.Templates" database="master" path="/sitecore/templates/$ext_layer$/$ext_modulename$"/>
+            $ext_startcommentrenderings$
+            <include name="$ext_layer$.$ext_modulename$.Renderings" database="master" path="/sitecore/layout/renderings/$ext_layer$/$ext_modulename$"/>
+            $ext_endcommentrenderings$
           </predicate>
         </configuration>
       </configurations>
