--- a/Sitecore.Foundation.Module/code/ProjectTemplate.csproj
+++ b/Sitecore.Foundation.Module/code/ProjectTemplate.csproj
@@ -89,7 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\z.Foundation\Sitecore.Foundation.$ext_modulename$.Serialization.config" />
+    <Content Include="App_Config\Include\z.$ext_layer$\Sitecore.$ext_layer$.$ext_modulename$.Serialization.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
