--- a/Templates/Templates.csproj
+++ b/Templates/Templates.csproj
@@ -20,8 +20,8 @@
     <ProjectGuid>{9EAB4CFE-E4E6-4F4D-B7C3-800D9BB59ACA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Helix.Templates</RootNamespace>
-    <AssemblyName>Helix.Templates</AssemblyName>
+    <RootNamespace>Sitecore.Helix.Templates</RootNamespace>
+    <AssemblyName>Sitecore.Helix.Templates</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
