--- a/Templates.Files/code/App_Config/Include/z.Foundation/Serialization.config
+++ b/Templates.Files/code/App_Config/Include/z.Foundation/Serialization.config
@@ -2,8 +2,8 @@
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="$ext_layer$.Serialization" patch:after="configuration[@name='$ext_layer$.Serialization']">
-          <targetDataStore physicalRootPath="$destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
+        <configuration name="$ext_layer$.$ext_modulename$" description="$ext_modulename$ Configuration" dependencies="Foundation.Serialization" patch:after="configuration[@name='Foundation.Serialization']">
+          <targetDataStore physicalRootPath="$ext_destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
             <include name="$ext_layer$.$ext_modulename$.Templates" database="master" path="/sitecore/templates/$ext_layer$/$ext_modulename$"/>
             $ext_startcommentrenderings$
