Added creation of the serialization folder for Project projects. Fixed the wizard by recursively looking for projects in the solution.

--- a/zzz.Project.Templates.Files/zzz.Project.Templates.Files.csproj
+++ b/zzz.Project.Templates.Files/zzz.Project.Templates.Files.csproj
@@ -57,10 +57,12 @@
     <None Include="serialization\Project.Layouts\item.yml" />
     <None Include="serialization\Project.Media\item.yml" />
     <None Include="serialization\Project.Templates\item.yml" />
-    <None Include="serialization\ProjectTemplate.shproj">
+    <Content Include="serialization\ProjectTemplate.csproj">
       <SubType>Designer</SubType>
-    </None>
-    <Content Include="serialization\Serialization.vstemplate" />
+    </Content>
+    <Content Include="serialization\Serialization.vstemplate">
+      <SubType>Designer</SubType>
+    </Content>
     <VSTemplate Include="Project.vstemplate">
       <SubType>Designer</SubType>
     </VSTemplate>
