--- a/zzz.Project.Templates.Files/serialization/Project.Layouts/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Project.Layouts/item.yml
@@ -2,7 +2,7 @@
 ID: "a912ad8e-763d-41c3-ae5c-cbec0b0a15ce"
 Parent: "46236758-1c62-4470-afde-fed0e5796a91"
 Template: "93227c5d-4fef-474d-94c0-f252ec8e8219"
-Path: /sitecore/layout/Layouts/Project/Seistore
+Path: /sitecore/layout/Layouts/Project/$ext_modulename$
 DB: master
 Languages:
 - Language: en
@@ -11,4 +11,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20180523T145707Z
+      Value: $ext_timestamp$
