--- a/zzz.Project.Templates.Files/serialization/Project.Media/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Project.Media/item.yml
@@ -2,7 +2,7 @@
 ID: "49215e3b-94ea-4336-9f40-ed483e3df3fa"
 Parent: "3d6658d8-a0bf-4e75-b3e2-d050fabcf4e1"
 Template: "fe5dd826-48c6-436d-b87a-7c4210c7413b"
-Path: /sitecore/media library/Seistore
+Path: /sitecore/media library/$ext_modulename$
 DB: master
 Languages:
 - Language: en
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20180523T152749Z
+      Value: $ext_timestamp$
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
