--- a/zzz.Project.Templates.Files/serialization/Project.Templates/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Project.Templates/item.yml
@@ -2,7 +2,7 @@
 ID: "33821f60-dd86-4018-85f2-69bdaaf216d7"
 Parent: "5bbb5958-19f2-48ae-ab06-9d429b55e0d7"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Project/Seistore
+Path: /sitecore/templates/Project/$ext_modulename$
 DB: master
 Languages:
 - Language: en
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20180420T095432Z
+      Value: $ext_timestamp$
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
