--- a/z.Foundation.Templates.Files/z.Foundation.Templates.Files.csproj
+++ b/z.Foundation.Templates.Files/z.Foundation.Templates.Files.csproj
@@ -54,10 +54,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="serialization\Foundation.Templates\item.yml" />
     <VSTemplate Include="code\CodeFoundation.vstemplate">
       <SubType>Designer</SubType>
     </VSTemplate>
-    <Content Include="serialization\Serialization.vstemplate" />
+    <Content Include="serialization\ProjectTemplate.csproj">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="serialization\Serialization.vstemplate">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="code\App_Config\Include\z.Foundation\Serialization.config">
       <SubType>Designer</SubType>
     </None>
