--- a/zz.Feature.Templates.Files/serialization/Feature.Placeholders/item.yml
+++ b/zz.Feature.Templates.Files/serialization/Feature.Placeholders/item.yml
@@ -1,8 +1,8 @@
 ﻿---
 ID: "$guid1$"
-Parent: "46236758-1c62-4470-afde-fed0e5796a91"
-Template: "93227c5d-4fef-474d-94c0-f252ec8e8219"
-Path: /sitecore/layout/Layouts/Project/$ext_modulename$
+Parent: "da12ef8c-dcb6-4cdd-8220-102b7aaffab8"
+Template: "c3b037a0-46e5-4b67-ac7a-a144b962a56f"
+Path: /sitecore/layout/Placeholder Settings/Feature/$ext_modulename$
 DB: master
 Languages:
 - Language: en
