--- a/zzz.Project.Templates.Files/serialization/Project.Media/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Project.Media/item.yml
@@ -1,5 +1,5 @@
 ﻿---
-ID: "49215e3b-94ea-4336-9f40-ed483e3df3fa"
+ID: "$guid3$"
 Parent: "3d6658d8-a0bf-4e75-b3e2-d050fabcf4e1"
 Template: "fe5dd826-48c6-436d-b87a-7c4210c7413b"
 Path: /sitecore/media library/$ext_modulename$
@@ -9,10 +9,10 @@ Languages:
   Versions:
   - Version: 1
     Fields:
-    - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
+    - ID: "$guid4$"
       Hint: __Created
       Value: $ext_timestamp$
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
+    - ID: "$guid5$"
       Hint: __Created by
       Value: |
         sitecore\admin
