--- a/Templates/Templates.csproj
+++ b/Templates/Templates.csproj
@@ -76,6 +76,7 @@
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
