--- a/zzz.Project.Templates.Files/zzz.Project.Templates.Files.csproj
+++ b/zzz.Project.Templates.Files/zzz.Project.Templates.Files.csproj
@@ -72,15 +72,8 @@
     <None Include="code\App_Config\Include\zzz.Project\Sitecore.Project.config" />
     <None Include="window.png" />
     <Content Include="Properties\AssemblyInfo.cs" />
-    <None Include="code\Properties\AssemblyInfo.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="code\Web.config" />
-    <None Include="code\Web.Debug.config" />
-    <None Include="code\Web.Release.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="code\packages.config" />
     <None Include="code\Views\web.config">
       <SubType>Designer</SubType>
     </None>
@@ -102,6 +95,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
+  <PropertyGroup>
+    <PreBuildEvent>xcopy $(ProjectDir)..\Shared.Templates.Files\code $(ProjectDir)\code /e /y
+xcopy $(ProjectDir)..\Shared.Templates.Files\serialization $(ProjectDir)\\serialization /e /y</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
