--- a/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
+++ b/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <None Include="serialization\Feature.Renderings\item.yml" />
     <None Include="serialization\Feature.Placeholders\item.yml" />
+    <None Include="serialization\Feature.Templates\Feature\Folder Templates.yml" />
+    <None Include="serialization\Feature.Templates\Feature\Interface Templates.yml" />
+    <None Include="serialization\Feature.Templates\Feature\Parameters Templates.yml" />
     <None Include="serialization\Feature.Templates\item.yml" />
     <VSTemplate Include="code\CodeFeature.vstemplate">
       <SubType>Designer</SubType>
