--- a/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
+++ b/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
@@ -54,13 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="serialization\Feature.Renderings\item.yml" />
-    <None Include="serialization\Feature.Placeholders\item.yml" />
-    <None Include="serialization\Feature.Templates\Feature\Folder Templates.yml" />
-    <None Include="serialization\Feature.Templates\Feature\Interface Templates.yml" />
-    <None Include="serialization\Feature.Templates\Feature\Settings Templates.yml" />
-    <None Include="serialization\Feature.Templates\Feature\Parameters Templates.yml" />
-    <None Include="serialization\Feature.Templates\item.yml" />
+    <None Include="serialization\Renderings\item.yml" />
+    <None Include="serialization\Placeholders\item.yml" />
+    <None Include="serialization\Templates\Module\Folder Templates.yml" />
+    <None Include="serialization\Templates\Module\Interface Templates.yml" />
+    <None Include="serialization\Templates\Module\Settings Templates.yml" />
+    <None Include="serialization\Templates\Module\Parameters Templates.yml" />
+    <None Include="serialization\Templates\item.yml" />
     <VSTemplate Include="code\CodeFeature.vstemplate">
       <SubType>Designer</SubType>
     </VSTemplate>
