--- a/zzz.Project.Templates.Files/serialization/ProjectTemplate.csproj
+++ b/zzz.Project.Templates.Files/serialization/ProjectTemplate.csproj
@@ -50,13 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Project.$ext_modulename$.Content\" />
-    <Content Include="Project.$ext_modulename$.Layouts\$ext_modulename$.yml" />
-    <Content Include="Project.$ext_modulename$.Media\$ext_modulename$.yml" />
-    <Content Include="Project.$ext_modulename$.Templates\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Layouts\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Media\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$.yml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Project.$ext_modulename$.Templates\$ext_modulename$\Content Type Templates.yml" />
-    <Content Include="Project.$ext_modulename$.Templates\$ext_modulename$\Page Type Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Content Type Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Page Type Templates.yml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
