--- a/zz.Feature.Templates.Files/serialization/ProjectTemplate.csproj
+++ b/zz.Feature.Templates.Files/serialization/ProjectTemplate.csproj
@@ -49,15 +49,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Feature.$ext_modulename$.Placeholders\$ext_modulename$.yml" />
-    <Content Include="Feature.$ext_modulename$.Renderings\$ext_modulename$.yml" />
-    <Content Include="Feature.$ext_modulename$.Templates\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Placeholders\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Renderings\$ext_modulename$.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$.yml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Feature.$ext_modulename$.Templates\$ext_modulename$\Folder Templates.yml" />
-    <Content Include="Feature.$ext_modulename$.Templates\$ext_modulename$\Interface Templates.yml" />
-    <Content Include="Feature.$ext_modulename$.Templates\$ext_modulename$\Parameters Templates.yml" />
-    <Content Include="Feature.$ext_modulename$.Templates\$ext_modulename$\Settings Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Folder Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Interface Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Parameters Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Settings Templates.yml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
