Updated templates folders for all layers

--- a/z.Foundation.Templates.Files/serialization/ProjectTemplate.csproj
+++ b/z.Foundation.Templates.Files/serialization/ProjectTemplate.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Folder Templates.yml" />
     <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Interface Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Settings Templates.yml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
