--- a/z.Foundation.Templates.Files/z.Foundation.Templates.Files.csproj
+++ b/z.Foundation.Templates.Files/z.Foundation.Templates.Files.csproj
@@ -57,6 +57,7 @@
     <None Include="serialization\Templates\Module\Folder Templates.yml" />
     <None Include="serialization\Templates\Module\Interface Templates.yml" />
     <None Include="serialization\Templates\item.yml" />
+    <None Include="serialization\Templates\Module\Settings Templates.yml" />
     <VSTemplate Include="code\CodeFoundation.vstemplate">
       <SubType>Designer</SubType>
     </VSTemplate>
