--- a/zz.Feature.Templates.Files/serialization/Placeholders/item.yml
+++ b/zz.Feature.Templates.Files/serialization/Placeholders/item.yml
@@ -2,7 +2,7 @@
 ID: "$guid1$"
 Parent: "da12ef8c-dcb6-4cdd-8220-102b7aaffab8"
 Template: "c3b037a0-46e5-4b67-ac7a-a144b962a56f"
-Path: /sitecore/layout/Placeholder Settings/Feature/$ext_modulename$
+Path: /sitecore/layout/Placeholder Settings/$ext_layer$/$ext_modulename$
 DB: master
 Languages:
 - Language: en
