--- a/z.Foundation.Templates.Files/serialization/Templates/Module/Interface Templates.yml
+++ b/z.Foundation.Templates.Files/serialization/Templates/Module/Interface Templates.yml
@@ -2,7 +2,7 @@
 ID: "$guid3$"
 Parent: "$guid1$"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Foundation/$ext_modulename$/Interface Templates
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$/Interface Templates
 DB: master
 Languages:
 - Language: en
