--- a/z.Foundation.Templates.Files/serialization/Templates/item.yml
+++ b/z.Foundation.Templates.Files/serialization/Templates/item.yml
@@ -2,7 +2,7 @@
 ID: "$guid1$"
 Parent: "7721a213-54d1-477c-aa31-12f2d381c9b7"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Foundation/$ext_modulename$
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$
 DB: master
 Languages:
 - Language: en
