--- a/zz.Feature.Templates.Files/serialization/Templates/Module/Interface Templates.yml
+++ b/zz.Feature.Templates.Files/serialization/Templates/Module/Interface Templates.yml
@@ -2,7 +2,7 @@
 ID: "$guid7$"
 Parent: "$guid5$"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Feature/$ext_modulename$/Interface Templates
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$/Interface Templates
 DB: master
 SharedFields:
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
