--- a/zz.Feature.Templates.Files/serialization/Templates/item.yml
+++ b/zz.Feature.Templates.Files/serialization/Templates/item.yml
@@ -2,7 +2,7 @@
 ID: "$guid5$"
 Parent: "73708ab8-0610-4588-9b1e-929369fd8165"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Feature/$ext_modulename$
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$
 DB: master
 Languages:
 - Language: en
