--- a/zzz.Project.Templates.Files/serialization/Layouts/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Layouts/item.yml
@@ -2,7 +2,7 @@
 ID: "$guid1$"
 Parent: "46236758-1c62-4470-afde-fed0e5796a91"
 Template: "93227c5d-4fef-474d-94c0-f252ec8e8219"
-Path: /sitecore/layout/Layouts/Project/$ext_modulename$
+Path: /sitecore/layout/Layouts/$ext_layer$/$ext_modulename$
 DB: master
 Languages:
 - Language: en
