--- a/zzz.Project.Templates.Files/serialization/Templates/Module/Folder Templates.yml
+++ b/zzz.Project.Templates.Files/serialization/Templates/Module/Folder Templates.yml
@@ -1,9 +1,13 @@
 ﻿---
-ID: "$guid2$"
-Parent: "$guid1$"
+ID: "$guid6$"
+Parent: "$guid6$"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
 Path: /sitecore/templates/$ext_layer$/$ext_modulename$/Folder Templates
 DB: master
+SharedFields:
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
+  Value: 0
 Languages:
 - Language: en
   Versions:
