--- a/zzz.Project.Templates.Files/serialization/Templates/item.yml
+++ b/zzz.Project.Templates.Files/serialization/Templates/item.yml
@@ -2,7 +2,7 @@
 ID: "$guid6$"
 Parent: "5bbb5958-19f2-48ae-ab06-9d429b55e0d7"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/Project/$ext_modulename$
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$
 DB: master
 Languages:
 - Language: en
