Fixed missing files in templates

--- a/zzz.Project.Templates.Files/serialization/ProjectTemplate.csproj
+++ b/zzz.Project.Templates.Files/serialization/ProjectTemplate.csproj
@@ -55,7 +55,8 @@
     <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$.yml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Content Type Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Datasource Templates.yml" />
+    <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Folder Templates.yml" />
     <Content Include="$ext_layer$.$ext_modulename$.Templates\$ext_modulename$\Page Type Templates.yml" />
   </ItemGroup>
   <PropertyGroup>
