Added serialization of marketing items

--- a/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Sitecore.Project.config
+++ b/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Sitecore.Project.config
@@ -37,5 +37,12 @@ XPath relative to the parent node of the inserted element.
             enableWebEdit="true"
             enableDebugger="true" />
     </sites>
+    <linkManager defaultProvider="sitecore">
+      <providers>
+        <add name="sitecore">
+          <patch:attribute name="lowercaseUrls">true</patch:attribute>
+        </add>
+      </providers>
+    </linkManager>
   </sitecore>
 </configuration>
