--- a/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
+++ b/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
@@ -7,8 +7,11 @@
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
             <include name="Project.$ext_modulename$.Templates" database="master" path="/sitecore/templates/project/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Media" database="master" path="/sitecore/media layout/$ext_modulename$"/>
-            <include name="Project.$ext_modulename$.Content" database="master" path="/sitecore/content"/>
+            <include name="Project.$ext_modulename$.Content" database="master" path="/sitecore/content/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Layouts" database="master" path="/sitecore/layout/layouts/project/$ext_modulename$"/>
+            <!--<include name="Project.$ext_modulename$.Email" database="master" path="/sitecore/content/Email"/>-->
+            <!--<include name="Project.$ext_modulename$.Marketing" database="master" path="/sitecore/system/Marketing Control Panel"/>-->
+            <!--<include name="Project.$ext_modulename$.Tenant1" database="master" path="/sitecore/content/$ext_modulename$"/>-->
           </predicate>
         </configuration>
       </configurations>
