Added Models folder to Feature layer Removed Controllers from Project layer

--- a/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
+++ b/zz.Feature.Templates.Files/zz.Feature.Templates.Files.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="code\Controllers\" />
+    <Folder Include="code\Models\" />
     <Folder Include="code\Views\Module\" />
   </ItemGroup>
   <ItemGroup>
