--- a/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
+++ b/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
@@ -11,7 +11,12 @@
             <include name="Project.$ext_modulename$.Layouts" database="master" path="/sitecore/layout/layouts/project/$ext_modulename$"/>
             <!--<include name="Project.$ext_modulename$.Email" database="master" path="/sitecore/content/Email"/>-->
             <!--<include name="Project.$ext_modulename$.Marketing" database="master" path="/sitecore/system/Marketing Control Panel"/>-->
-            <!--<include name="Project.$ext_modulename$.Tenant1" database="master" path="/sitecore/content/$ext_modulename$"/>-->
+            <!--<include name="Project.$ext_modulename$.TenantFolder1" database="master" path="/sitecore/content/$ext_modulename$">
+              <exclude children="true"/>
+            </include>-->
+            <!--<include name="Project.$ext_modulename$.Tenant1" database="master" path="/sitecore/content/$ext_modulename$">
+              <exclude children="true"/>
+            </include>-->
           </predicate>
         </configuration>
       </configurations>
