--- a/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
+++ b/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
@@ -6,7 +6,7 @@
           <targetDataStore physicalRootPath="$ext_destinationdirectory$\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true"/>
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance ="true">
             <include name="Project.$ext_modulename$.Templates" database="master" path="/sitecore/templates/project/$ext_modulename$"/>
-            <include name="Project.$ext_modulename$.Media" database="master" path="/sitecore/media layout/$ext_modulename$"/>
+            <include name="Project.$ext_modulename$.Media" database="master" path="/sitecore/media library/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Content" database="master" path="/sitecore/content/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Layouts" database="master" path="/sitecore/layout/layouts/project/$ext_modulename$"/>
             <!--<include name="Project.$ext_modulename$.Forms" database="master" path="/sitecore/Forms"/>-->
