--- a/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
+++ b/zzz.Project.Templates.Files/code/App_Config/Include/zzz.Project/Serialization.config
@@ -8,7 +8,7 @@
             <include name="Project.$ext_modulename$.Templates" database="master" path="/sitecore/templates/project/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Media" database="master" path="/sitecore/media library/$ext_modulename$"/>
             <include name="Project.$ext_modulename$.Layouts" database="master" path="/sitecore/layout/layouts/project/$ext_modulename$"/>
-            <include name="Project.$ext_modulename$.Content" database="master" path="/sitecore/content/$ext_modulename$"/>
+            <!--<include name="Project.$ext_modulename$.Content" database="master" path="/sitecore/content/$ext_modulename$"/>-->
             <!--<include name="Project.$ext_modulename$.Forms" database="master" path="/sitecore/Forms"/>-->
             <!--<include name="Project.$ext_modulename$.Email" database="master" path="/sitecore/content/Email"/>-->
             <!--<include name="Project.$ext_modulename$.Marketing" database="master" path="/sitecore/system/Marketing Control Panel"/>-->
