--- a/zzz.Project.Templates.Files/serialization/Templates/Module/Datasource Templates.yml
+++ b/zzz.Project.Templates.Files/serialization/Templates/Module/Datasource Templates.yml
@@ -2,7 +2,7 @@
 ID: "$guid7$"
 Parent: "$guid6$"
 Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c"
-Path: /sitecore/templates/$ext_layer$/$ext_modulename$/Content Type Templates
+Path: /sitecore/templates/$ext_layer$/$ext_modulename$/Datasources Templates
 DB: master
 Languages:
 - Language: en
